--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,40 +1,47 @@
-name: Build README
-
-on:
-  push:
-  workflow_dispatch:
-  schedule:
-    - cron: '28 * * * *'
-
 jobs:
   build:
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
+    - name: Collect Workflow Telemetry
+      uses: Nfsaavedra/workflow-telemetry-action@raw_data
+      with:
+        save_raw_stats: true
     - name: Check out repo
       uses: actions/checkout@v4
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: "3.11"
-    - uses: actions/cache@v3
-      name: Configure pip caching
+        python-version: '3.11'
+    - name: Configure pip caching
+      uses: actions/cache@v3
       with:
-        path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
+        path: ~/.cache/pip
+        restore-keys: '${{ runner.os }}-pip-
+
+          '
     - name: Install Python dependencies
-      run: |
-        python -m pip install -r requirements.txt
+      run: 'python -m pip install -r requirements.txt
+
+        '
     - name: Update README
-      run: |-
-        python build_readme.py
-        cat README.md
+      run: 'python build_readme.py
+
+        cat README.md'
     - name: Commit and push if changed
-      run: |-
-        git diff
+      run: 'git diff
+
         git config --global user.email "actions@users.noreply.github.com"
+
         git config --global user.name "README-bot"
+
         git add -A
+
         git commit -m "Updated content" || exit 0
-        git push
+
+        git push'
+name: Build README
+'on':
+- workflow_dispatch
+permissions: write-all
